--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
     </div>
     <button id="startBtn">Start Dictation</button>
     <button id="stopBtn" disabled>Stop Dictation</button>
-  </div>
+  </div> <div class="controls">
+  <label for="voiceSelect">Choose Voice:</label>
+  <select id="voiceSelect">
+    <option value="female">Female Voice</option>
+    <option value="male">Male Voice</option>
+  </select>
+</div>
+
   <script src="script.js"></script>
 </body>
 </html>
